tests/baselines/reference/parserGreaterThanTokenAmbiguity7.errors.txt
==== tests/cases/compiler/parserGreaterThanTokenAmbiguity7.ts (1 errors) ====
    1 >> > 2;
         ~
!!! parserGreaterThanTokenAmbiguity7.ts(1,6): error TS1003: Identifier expected.